--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "devDependencies": {
         "grunt": "~0.4.1",
         "grunt-shell": "0.3.*",
+        "grunt-contrib-requirejs" : "~0.4.0",
         "load-grunt-tasks": "~0.1.0",
         "time-grunt": "~0.1.1",
         "bower": "1.2.*"
