--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "client_side_boilerplate",
+    "version": "0.1.0",
 
     "homepage": "https://github.com/UnknownHero/client_side_boilerplate.git",
 
@@ -9,8 +10,17 @@
 
     "devDependencies": {
         "grunt": "~0.4.1",
+
         "grunt-shell": "0.3.*",
         "grunt-contrib-requirejs" : "~0.4.0",
+        "grunt-contrib-cssmin" : "~0.4.0",
+        "grunt-contrib-copy" : "~0.4.0",
+        "grunt-contrib-clean": "~0.4.1",
+        "grunt-ember-templates" : "~0.4.1",
+        "grunt-contrib-watch" : "~0.4.0",
+        "grunt-contrib-sass" : "~0.5.0",
+        "grunt-contrib-compass" : "~0.4.0",
+
         "load-grunt-tasks": "~0.1.0",
         "time-grunt": "~0.1.1",
         "bower": "1.2.*"
