--- a/bower.json
+++ b/bower.json
@@ -4,11 +4,11 @@
     "version":"0.1.0",
     "directory" : "app/vendor",
     "dependencies": {
-
         "jquery": "~1.9.1",
         "ember": "latest",
         "ember-data-shim" : "latest",
         "handlebars": "1.0.0-rc.4",
+        "swag": "0.3.1",
         "requirejs" : "latest",
         "require-css" : "latest",
 
