--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
         "grunt": "~0.4.1",
 
         "grunt-shell": "0.3.*",
+        "grunt-contrib-jasmine": "*",
+        "grunt-contrib-connect": "~0.3.0",
+        "grunt-template-jasmine-istanbul": "*",
+        "grunt-template-jasmine-requirejs" : "*",
         "grunt-contrib-requirejs" : "~0.4.0",
         "grunt-contrib-cssmin" : "~0.4.0",
         "grunt-contrib-copy" : "~0.4.0",
