--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -1,80 +1,64 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
+$npm_install = <<SCRIPT
+     cd /home/vagrant/app/ && npm install
+SCRIPT
+
+$npm_global = <<SCRIPT
+  npm install -g grunt-cli
+SCRIPT
+
+
+$gem_global = <<SCRIPT
+  gem install compass
+SCRIPT
+
+$goto_project = <<SCRIPT
+   cd /home/vagrant/app/
+SCRIPT
+
+$build = <<SCRIPT
+    cd /home/vagrant/app/ && grunt build
+SCRIPT
+
+$run_server = <<SCRIPT
+    cd /home/vagrant/app/ && grunt dev
+SCRIPT
+
+VAGRANTFILE_API_VERSION = "2"
 require 'rbconfig'
-IS_WINDOWS = (RbConfig::CONFIG['host_os'] =~ /mswin|mingw|cygwin/) ? true : false
 
-Vagrant.configure("2") do |config|
-  # All Vagrant configuration is done here. The most common configuration
-  # options are documented and commented below. For a complete reference,
-  # please see the online documentation at vagrantup.com.
 
-  # Every Vagrant virtual environment requires a box to build off of.
+Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.box = "precise32"
 
-  # The url from where the 'config.vm.box' box will be fetched if it
-  # doesn't already exist on the user's system.
   config.vm.box_url = "http://files.vagrantup.com/precise32.box"
 
-  # This can be set to the host name you wish the guest machine to have.
-  config.vm.hostname = "proj-name-dev-box"
-
-  # Create a forwarded port mapping which allows access to a specific port
-  # within the machine from a port on the host machine. In the example below,
-  # accessing "localhost:3000" will access port 3000 on the guest machine.
   config.vm.network :forwarded_port, guest: 8064, host: 8067
+  config.vm.network :forwarded_port, guest: 8065, host: 8068
 
-  # Create a private network, which allows host-only access to the machine
-  # using a specific IP.
-  config.vm.network :private_network, ip: "192.168.33.10"
+  config.vm.synced_folder "../", "/home/vagrant/app"
 
-  # Create a public network, which generally matched to bridged network.
-  # Bridged networks make the machine appear as another physical device on
-  # your network.
-  # config.vm.network :public_network
 
-  # Share an additional folder to the guest VM. The first argument is
-  # the path on the host to the actual folder. The second argument is
-  # the path on the guest to mount the folder. And the optional third
-  # argument is a set of non-required options.
-  config.vm.synced_folder "../", "/home/vagrant/proj-name"
-
-  # Provider-specific configuration so you can fine-tune various
-  # backing providers for Vagrant. These expose provider-specific options.
-  # Example for VirtualBox:
-  config.vm.provider :virtualbox do |vb|
-    # Don't boot with headless mode
-    # vb.gui = true
-
-    # Use VBoxManage to customize the VM. For example, to change memory and 
-    # allow symlinks to be created in the shared folder (ex: node_modules):
-    vb.customize ["modifyvm", :id, "--memory", "1024"]
-    vb.customize ["setextradata", :id, "VBoxInternal2/SharedFoldersEnableSymlinksCreate/proj-name", "1"]
-  end
-  # View the documentation for the provider you're using for more
-  # information on available options.
-
-  # Requires vagrant-vbguest plugin
-  #
-  # set auto_update to false, if you do NOT want to check the correct  
-  # VirtualBox guest additions version when booting this machine
-  # config.vbguest.auto_update = false
-
-  # Enable provisioning with chef solo, specifying a cookbooks path, roles
-  # path, and data_bags path (all relative to this Vagrantfile), and adding
-  # some recipes and/or roles.
-  config.vm.provision :chef_solo, :log_level => :debug
   config.vm.provision :chef_solo do |chef|
-    chef.cookbooks_path = "cookbooks"
-    chef.add_recipe "apt"
-    chef.add_recipe "build-essential"
     chef.add_recipe "nodejs"
-    chef.add_recipe "vim"
-
     chef.json = {
         "nodejs" => {
-            "version" => "0.10.12"
+            "version" => "0.10.0"
+            # uncomment the following line to force
+            # recent versions (> 0.8.5) to be built from
+            # the source code
+            # , "from_source" => true
         }
     }
   end
+
+  config.vm.provision :shell, :inline => $npm_global
+  config.vm.provision :shell, :inline => $gem_global
+  config.vm.provision :shell, :inline => $npm_install
+  config.vm.provision :shell, :inline => $build
+  config.vm.provision :shell, :inline => $run_server
+
+
 end
